fixed conflict with pb spacing style

--- a/themes/fullstackdigital/assets/scss/critical/_columns.scss
+++ b/themes/fullstackdigital/assets/scss/critical/_columns.scss
@@ -31,7 +31,7 @@
 }
 
 .col-8 {
-  flex-basis: 58.3333%
+  flex-basis: 66.6666%;
 }
 
 .col-9 {
